[Manjunatha]Aadded:redis and refactor of swagger
